fix: global scrollbar is displayed when it shouldn't

--- a/package/styles.scss
+++ b/package/styles.scss
@@ -3,9 +3,8 @@
   overflow: auto;
 }
 
-.canvasbar-scrollable {
-  width: 100%;
-  height: 100%;
+.canvasbar-scrollable,
+.canvasbar-hide-root-scrollbars {
   overflow: auto;
   -ms-overflow-style: none;  /* Internet Explorer 10+ */
   scrollbar-width: none;  /* Firefox */
@@ -15,9 +14,9 @@
   }
 }
 
-/* Firefox */
-:root.canvasbar-hide-global-scrollbars {
-  scrollbar-width: none;
+.canvasbar-scrollable:not(body) {
+  width: 100%;
+  height: 100%;
 }
 
 .canvasbar-scrollbar-x,
@@ -46,20 +45,22 @@
   right: 0;
 }
 
-.canvasbar-with-x-scrollbar .canvasbar-scrollbar-x,
-.canvasbar-with-y-scrollbar .canvasbar-scrollbar-y {
+.canvasbar-with-x-scrollbar > .canvasbar-scrollbar-x,
+.canvasbar-with-y-scrollbar > .canvasbar-scrollbar-y {
   display: block;
 }
 
-.canvasbar-with-x-scrollbar.canvasbar-with-y-scrollbar .canvasbar-scrollbar-x {
+.canvasbar-with-x-scrollbar.canvasbar-with-y-scrollbar > .canvasbar-scrollbar-x {
   width: calc(100% - 10px);
 }
 
-.canvasbar-with-x-scrollbar.canvasbar-with-y-scrollbar .canvasbar-scrollbar-y {
+.canvasbar-with-x-scrollbar.canvasbar-with-y-scrollbar > .canvasbar-scrollbar-y {
   height: calc(100% - 10px);
 }
 
-body.canvasbar-scrollable > .canvasbar-scrollbar-x,
-body.canvasbar-scrollable > .canvasbar-scrollbar-y {
-  position: fixed;
+body {
+  > .canvasbar-scrollbar-x,
+  > .canvasbar-scrollbar-y {
+    position: fixed;
+  }
 }
